--- a/src/renderer/src/scss/components/_navbar.scss
+++ b/src/renderer/src/scss/components/_navbar.scss
@@ -3,21 +3,21 @@
   justify-content: space-evenly;
   font-size: 2rem;
   letter-spacing: 1.4px;
-  background-color: #003366;
-  color: #f8f8f8;
+  background-color: $darkBlue;
+  color: $dirtyWhite;
 
   &__item {
     cursor: pointer;
     padding: 1rem;
-    color: #f8f8f8;
+    color: $dirtyWhite;
     transition: color 0.3s ease-in-out;
 
     &:hover {
-      color: #007fff;
+      color: $blue;
     }
 
     &--active {
-      color: #007fff;
+      color: $blue;
     }
   }
 }
