--- a/src/renderer/src/scss/base/_variables.scss
+++ b/src/renderer/src/scss/base/_variables.scss
@@ -5,8 +5,12 @@ $dirtyWhite: #f8f8f8;
 
 // games component
 $color-blue: #367588;
-$color-light-blue: #1e90ff;
-$color-green: #32cd32;
-$color-yellow: #ffcc00;
-$color-red: #b22222;
-$color-dark-red: #ff0000;
+$color-light-blue: #64b5f6;
+$color-green: #6c9575;
+$color-yellow: #fbc02d;
+$color-soft-red: #e57373;
+
+$color-beige: #f4f3e7;
+$color-blue-muted: #52688c;
+$color-blue-gray: #c3d0d3;
+$color-blue-dark: #312d4e;
