--- a/src/renderer/src/scss/layout/_games.scss
+++ b/src/renderer/src/scss/layout/_games.scss
@@ -2,6 +2,11 @@
   padding: 2rem;
   display: flex;
   gap: 5rem;
+  height: 100vh;
+  background-image: url('../../../src/assets/backgroundMuted.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   .game-form {
     display: flex;
@@ -15,30 +20,44 @@
       width: 100%;
       height: 50%;
       font-family: 'Roboto', sans-serif;
+      font-weight: 600;
       resize: none;
-      border: 1px solid #ccc;
+      border: 2px solid rgba(255, 255, 255, 0.2);
+      color: $color-blue-dark;
       outline: none;
       font-size: 1.6rem;
       padding: 1rem;
       margin-bottom: 1rem;
       border-radius: 5px;
+      background-color: rgba(132, 159, 188, 0.4);
+      backdrop-filter: blur(3px);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+      &::placeholder {
+        color: $color-blue-dark;
+        font-weight: 400;
+      }
+
+      &:focus {
+        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+      }
     }
 
     &__submit-button {
+      cursor: pointer;
       width: 100%;
       height: 3rem;
       border: none;
       outline: none;
-      background-color: #367588;
+      background-color: $color-blue-dark;
       color: #f8f8f8;
       transition: background-color 0.3s ease-in-out;
       font-size: 1.6rem;
       font-weight: 600;
-      cursor: pointer;
       border-radius: 5px;
 
       &:hover {
-        background-color: #1e90ff;
+        background-color: $color-light-blue;
       }
     }
   }
@@ -71,21 +90,53 @@
     }
 
     &__container {
+      position: relative;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      color: $color-blue-dark;
       padding: 1rem;
       gap: 1rem;
-      background-color: rgba(30, 144, 255, 0.1);
       border-radius: 1rem;
+      background-color: rgba(244, 243, 231, 0.4);
+      backdrop-filter: blur(3px);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
       &-description {
         display: flex;
         flex-direction: column;
         gap: 0.3rem;
 
-        h2 {
-          font-size: 2rem;
+        span {
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+
+          h2 {
+            font-size: 2rem;
+          }
+
+          a {
+            padding: 1px 5px;
+            border-radius: 5px;
+            background-color: $color-light-blue;
+            color: $dirtyWhite;
+
+            &:hover {
+              background-color: $color-blue-dark;
+            }
+          }
+        }
+
+        .modal {
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          background-color: black;
+          color: #fff;
+          z-index: 99;
         }
 
         .icons-ok,
@@ -115,16 +166,16 @@
       }
 
       .btn-delete {
-        background-color: $color-red;
+        background-color: $color-soft-red;
         color: #ffffff;
         border: none;
         outline: none;
-        padding: 0.5rem;
+        padding: 0.6rem;
         border-radius: 5px;
         cursor: pointer;
 
         &:hover {
-          background-color: $color-dark-red;
+          background-color: #e573738e;
         }
       }
     }
