--- a/src/renderer/src/css/main.css
+++ b/src/renderer/src/css/main.css
@@ -178,7 +178,10 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 2rem;
 }
 .games-grid .generated-folders__container-description span a {
-  padding: 1px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
   border-radius: 5px;
   background-color: #64b5f6;
   color: #f8f8f8;
@@ -192,9 +195,12 @@ input[type=number]::-webkit-outer-spin-button {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: black;
   color: #fff;
   z-index: 99;
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: rgba(49, 45, 78, 0.9);
+  backdrop-filter: blur(15px);
 }
 .games-grid .generated-folders__container-description .icons-ok,
 .games-grid .generated-folders__container-description .icons-check {
@@ -223,7 +229,7 @@ input[type=number]::-webkit-outer-spin-button {
   color: #ffffff;
   border: none;
   outline: none;
-  padding: 0.6rem;
+  padding: 0.8rem;
   border-radius: 5px;
   cursor: pointer;
 }
