--- a/src/renderer/src/css/main.css
+++ b/src/renderer/src/css/main.css
@@ -51,6 +51,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .navbar {
+  height: 8vh;
   display: flex;
   justify-content: space-evenly;
   font-size: 2rem;
@@ -72,10 +73,10 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .games-grid {
+  height: 92vh;
   padding: 2rem;
   display: flex;
   gap: 5rem;
-  height: 100vh;
   background-image: url("../../../src/assets/backgroundMuted.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -201,6 +202,8 @@ input[type=number]::-webkit-outer-spin-button {
   border-radius: 1rem;
   background-color: rgba(49, 45, 78, 0.9);
   backdrop-filter: blur(15px);
+  overflow-y: auto;
+  overflow-x: auto;
 }
 .games-grid .generated-folders__container-description .modal__title {
   display: flex;
