changed paths, added react router

--- a/src/renderer/src/scss/base/_variables.scss
+++ b/src/renderer/src/scss/base/_variables.scss
@@ -14,3 +14,11 @@ $color-beige: #f4f3e7;
 $color-blue-muted: #52688c;
 $color-blue-gray: #c3d0d3;
 $color-blue-dark: #312d4e;
+
+//EXPERIMENTAL
+$light-blue: #89cff0; // A soft light blue
+$medium-blue: #0a95d7; // A medium shade of blue for the main elements
+$dark-blue: #064d8c; // A darker blue for active states or hover effects
+$neon-blue: #39f; // A bright neon blue for highlights or active elements
+$white: #ffffff; // White for text and contrast
+$light-gray: #f0f0f0; // Light gray for backgrounds or less emphasized elements
