--- a/src/renderer/src/scss/components/_navbar.scss
+++ b/src/renderer/src/scss/components/_navbar.scss
@@ -14,11 +14,10 @@
     transition: color 0.3s ease-in-out;
 
     &:hover {
-      color: $blue;
-    }
-
-    &--active {
-      color: $blue;
+      color: $neon-blue;
     }
   }
 }
+ 
+
+
