--- a/src/renderer/src/scss/main.css
+++ b/src/renderer/src/scss/main.css
@@ -68,9 +68,6 @@ input[type=number]::-webkit-outer-spin-button {
 .navbar__item:hover {
   color: #39f;
 }
-.navbar__item--active {
-  color: #39f;
-}
 
 .games-grid {
   height: 92vh;
@@ -104,8 +101,13 @@ input[type=number]::-webkit-outer-spin-button {
   margin-bottom: 1rem;
   border-radius: 5px;
   background-color: rgba(132, 159, 188, 0.4);
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.games-grid .game-form__textarea::-moz-placeholder {
+  color: #312d4e;
+  font-weight: 400;
 }
 .games-grid .game-form__textarea::placeholder {
   color: #312d4e;
@@ -162,7 +164,8 @@ input[type=number]::-webkit-outer-spin-button {
   gap: 1rem;
   border-radius: 1rem;
   background-color: rgba(244, 243, 231, 0.4);
-  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 .games-grid .generated-folders__container-description {
@@ -201,7 +204,8 @@ input[type=number]::-webkit-outer-spin-button {
   padding: 1rem;
   border-radius: 1rem;
   background-color: rgba(49, 45, 78, 0.9);
-  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+          backdrop-filter: blur(15px);
   overflow-y: auto;
   overflow-x: auto;
 }
@@ -247,4 +251,4 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .games-grid .generated-folders__container .btn-delete:hover {
   background-color: rgba(229, 115, 115, 0.5568627451);
-}
+}/*# sourceMappingURL=main.css.map */
