--- a/src/renderer/src/scss/components/_navbar.scss
+++ b/src/renderer/src/scss/components/_navbar.scss
@@ -1,7 +1,6 @@
 .navbar {
-  height: 8vh;
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
   font-size: 2rem;
   letter-spacing: 1.4px;
   background-color: $darkBlue;
@@ -16,5 +15,9 @@
     &:hover {
       color: $neon-blue;
     }
+  }
+
+  .active {
+    color: red;
   }
 }
