--- a/src/renderer/src/scss/main.css
+++ b/src/renderer/src/scss/main.css
@@ -58,6 +58,7 @@ input[type=number]::-webkit-outer-spin-button {
   letter-spacing: 1.4px;
   background-color: #003366;
   color: #f8f8f8;
+  background-color: red;
 }
 .navbar__item {
   cursor: pointer;
@@ -251,4 +252,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .games-grid .generated-folders__container .btn-delete:hover {
   background-color: rgba(229, 115, 115, 0.5568627451);
+}
+
+.app-layout {
+  display: flex;
 }/*# sourceMappingURL=main.css.map */
