--- a/src/renderer/src/scss/base/_variables.scss
+++ b/src/renderer/src/scss/base/_variables.scss
@@ -20,5 +20,18 @@ $light-blue: #89cff0; // A soft light blue
 $medium-blue: #0a95d7; // A medium shade of blue for the main elements
 $dark-blue: #064d8c; // A darker blue for active states or hover effects
 $neon-blue: #39f; // A bright neon blue for highlights or active elements
-$white: #ffffff; // White for text and contrast
+// White for text and contrast
 $light-gray: #f0f0f0; // Light gray for backgrounds or less emphasized elements
+
+// new pallete!
+$color-deep-forest: #1c281c;
+$color-white: #fff;
+$color-ocean-blue: #228290;
+$color-light-blue: #d4e5e5;
+$color-sky-blue: #abc7d3;
+$color-steel-blue: #85abae;
+$color-forest-green: #7bad2f;
+$color-lavender: #bbb7d5;
+$color-plum: #8a556f;
+$color-rose: #cf94b6;
+$color-sand: #c1bd98;
