--- a/src/renderer/src/scss/components/_navbar.scss
+++ b/src/renderer/src/scss/components/_navbar.scss
@@ -1,23 +1,35 @@
 .navbar {
   display: flex;
   flex-direction: column;
-  font-size: 2rem;
+  gap: 1rem;
+  height: 100vh;
+  padding: 3rem 1rem;
+  font-size: 1.8rem;
+  border-right: 1px solid $color-sky-blue;
   letter-spacing: 1.4px;
-  background-color: $darkBlue;
-  color: $dirtyWhite;
+  background-color: $color-light-blue;
 
   &__item {
+    display: flex;
+    padding: 0.5rem 2rem;
+    border-radius: 1rem;
     cursor: pointer;
-    padding: 1rem;
-    color: $dirtyWhite;
+    color: $color-ocean-blue;
     transition: color 0.3s ease-in-out;
 
-    &:hover {
-      color: $neon-blue;
+    &:hover,
+    .active {
+      background: radial-gradient(circle at top left, rgba(255, 255, 255, 0.5), $color-ocean-blue),
+        radial-gradient(circle at right, rgba(255, 255, 255, 0.5), $color-ocean-blue),
+        $color-ocean-blue;
+      color: $color-white;
     }
   }
 
   .active {
-    color: red;
+    background: radial-gradient(circle at top left, rgba(255, 255, 255, 0.5), $color-ocean-blue),
+      radial-gradient(circle at right, rgba(255, 255, 255, 0.5), $color-ocean-blue),
+      $color-ocean-blue;
+    color: $color-white;
   }
 }
