--- a/src/renderer/src/scss/layout/_games.scss
+++ b/src/renderer/src/scss/layout/_games.scss
@@ -9,13 +9,36 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  .form-layout {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+
+    .btn-cdn-check {
+      cursor: pointer;
+      width: 100%;
+      height: 3rem;
+      border: none;
+      outline: none;
+      background-color: $color-plum;
+      color: #f8f8f8;
+      transition: background-color 0.3s ease-in-out;
+      font-size: 1.6rem;
+      font-weight: 600;
+      border-radius: 5px;
+
+      &:hover {
+        background-color: $color-lavender;
+      }
+    }
+  }
+
   .game-form {
     display: flex;
     flex: 10;
     flex-direction: column;
     align-items: flex-start;
     height: 100%;
-    padding: 2rem;
 
     &__textarea {
       width: 100%;
