--- a/src/renderer/src/scss/layout/_games.scss
+++ b/src/renderer/src/scss/layout/_games.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   padding: 2rem;
   gap: 1rem;
-  background-image: url('../../../src/assets/backgroundMuted.png');
+  // background-image: url('../../../src/assets/backgroundMuted.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
